# Rust-Performance-Study

./: .gitmodules  Cargo.toml  README.md  dataset.md  plot.py
dataset/: crawler.py  key_optimize_or_optimization_1.json  key_perf_1.json  key_perf_2.json  refine.py  statistics.md
results/data/: allocating_then_flatten.json  bounds_checking.json  data_collection_reallocation.json  encoding_checking.json  incorrect_iterator_type.json  suboptimal_data_collection.json
src/: main.rs  utils.rs
src/checking/: borrowing_checking.rs  bounds_checking.rs  encoding_checking.rs  mod.rs
src/data_collections_inefficiency/: data_collection_initialization.rs  data_collection_reallocation.rs  functionally_matched_but_suboptimal.rs  functionally_unmatched.rs  mod.rs
src/inadequate_concurrency/: divisible_serial_computation.rs  lock_contention.rs  mod.rs
src/iterator_misusing/: allocating_in_flatmap_then_collecting.rs  incorrect_iterator_type.rs  mod.rs
src/memory_cloning/: cloned_object_used_as_immutable.rs  continuous_data_collection_conversion.rs  mod.rs
src/repeated_computation/: local_level.rs  mod.rs  nonlocal_level.rs
src/trait_implementations_untuned/: auxiliary_traits_without_overriding.rs  generic_traits_without_specialization.rs  hash_traits_auto_derived_by_the_compiler.rs  mod.rs
